# m20-custom-firmware

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
code/: .cproject  .mxproject  .project  STM32L051R6TX_FLASH.ld  STM32L431RCTX_FLASH.ld  m20_custom_firmware Debug.launch  m20_custom_firmware.ioc  radiosonda_m20 Debug.launch  radiosonda_m20.ioc
code/Core/Inc/: adf.h  adf7012.h  config.h  fsk4.h  gps.h  horus.h  lps22hb.h  main.h  minmea.h  nmea.h  stm32l0xx_it.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
code/Core/Src/: adf.c  adf7012.c  fsk4.c  gps.c  horus.c  lps22hb.c  main.c  minmea.c  nmea.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
code/Debug/: m20_custom_firmware.elf  m20_custom_firmware.list  m20_custom_firmware.map  makefile  objects.list  radiosonda_m20.elf  radiosonda_m20.list  radiosonda_m20.map  sources.mk
m20/: .mxproject  Dockerfile  Makefile  STM32L051XX_FLASH.ld  m20.ioc  openocd_m20.cfg  pkt  stm32l051r6tx_flash.ld
m20/Core/Inc/: adf.h  afsk.h  aprs.h  asn1crt.h  asn1crt_encoding.h  config.h  fsk4.h  gps.h  horus.h  horus_l2.h  horus_v2.h  horus_v3.h  lps22hb.h  main.h  morse.h  nmea.h  si5351.h  stm32_assert.h  stm32l0xx_it.h  uart.h  ublox_gps.h  ubx.h  utils.h  xm_gps.h
m20/Core/Src/: HorusBinaryV3.asn1  adf.c  afsk.c  aprs.c  asn1crt.c  asn1crt_encoding.c  fsk4.c  gps.c  horus.c  horus_l2.c  horus_v2.c  horus_v3.c  lps22hb.c  main.c  morse.c  nmea.c  si5351.c  stm32l0xx_it.c  syscalls.c  sysmem.c  uart.c  (+5 more)
m20/openocd/: openocd_m20.cfg
m20/tests/: test.c  xm_gps_test.c
(+67 files in other folders)
